--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -7,6 +7,17 @@ h1 {
   text-align: center;
 }
 
+.navbar-brand {
+  height: 70px;
+  font-size: 25px;
+  line-height: 27px;
+}
+
+.navbar-text {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .navbar-inverse .navbar-brand {
   color: white;
 }
