Main design for landing page

--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -18,8 +18,23 @@ h1 {
   margin-bottom: 5px;
 }
 
-.navbar-inverse .navbar-brand {
-  color: white;
+.main-img .text {
+  margin-top: 40px;
+}
+
+.main-img .text.time{
+  left:-30px;
+}
+
+.main-img .fa-female {
+  color: @bw-orange;
+  font-size: 10em;
+  margin-right: 20px;
+}
+
+.main-img img {
+  height: 140px;
+  vertical-align: bottom;
 }
 
 
