Completed landing page

--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -7,15 +7,18 @@ h1 {
   text-align: center;
 }
 
-.navbar-brand {
-  height: 70px;
-  font-size: 25px;
-  line-height: 27px;
+.navbar-header {
+  margin-top: 10px;
+}
+
+.nabar-header span.img {
+  height: 30px;
+  margin-bottom:10px;
 }
 
 .navbar-text {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  font-size: 25px;
+  line-height: 0px;
 }
 
 .main-img .text {
@@ -23,13 +26,16 @@ h1 {
 }
 
 .main-img .text.time{
-  left:-30px;
+  //left:-30px;
+}
+
+.closer {
+  margin-top: -5px;
 }
 
 .main-img .fa-female {
   color: @bw-orange;
   font-size: 10em;
-  margin-right: 20px;
 }
 
 .main-img img {
