Updated form view

--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -45,8 +45,31 @@ h1 {
 
 .form-group {
   margin-right: 15px;
+  margin-bottom: 15px;
 }
 
+.form-inline {
+  margin-bottom: 15px;
+}
+
+label {
+  font-weight: 0px;
+  margin-right: 5px;
+}
+
+.btn-bw {
+  background-color: @bw-orange;
+  color: white;
+}
+
+.btn.btn-bw.focus, .btn.btn-bw:focus, .btn.btn-bw:hover {
+  color: white;
+  background-color: #c66c0c;
+}
+
+.fa-calendar.focus, .fa-calendar:focus, .fa-calendar:hover {
+  color: black;
+}
 
 ///////////////////////
 
