--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -71,6 +71,29 @@ label {
   color: black;
 }
 
+
+@media (min-width: 768px) {
+  .form-inline .form-noncontrol {
+    display: inline-block;
+    width: auto;
+    vertical-align: middle;
+  }
+}
+
+.form-noncontrol {
+
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+
 ///////////////////////
 
 .fa-user {
