--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1,3 +1,3 @@
 @import url('../../lib/components-font-awesome/css/font-awesome.min.css');
 @import url('../../lib/bootstrap-css-only/css/bootstrap.min.css');
-@import url('../../temp/coder-dojo-signup.css');
+@import url('../../temp/coderdojo-signup.css');
