--- a/client/app/view/view.html
+++ b/client/app/view/view.html
@@ -5,24 +5,26 @@
 				<td>#</td>
 				<td>Name</td>
 				<td>Email</td>
+				<td>Phone</td>
 				<td>Ninja Name</td>
 				<td>Ninja Age</td>
 				<td>Laptop Required</td>
 			</tr>
 		</thead>
-			<tbody ng-repeat="parent in ninjas">
+			<tbody ng-repeat="ninja in ninjas">
 				<tr>
 					<td></td>
-					<td>{{parent.name}}</td>
-					<td>{{parent.email}}</td>
+					<td>{{ninja.parent.firstName}} {{ninja.parent.lastName}}</td>
+					<td>{{ninja.parent.email}}</td>
+					<td>{{ninja.parent.phone}}</td>
 					<td colspan="3"></td>
 				</tr>
-				<tr ng-repeat="ninja in parent.ninjaInformation">
-					<td>{{$index + 1}}</td>
-					<td colspan="2"></td>
-					<td>{{ninja.name}}</td>
-					<td>{{ninja.age}}</td>
-					<td>{{ninja.laptopRequired}}</td>
+				<tr ng-repeat="n in ninja.ninjas">
+					<td></td>
+					<td colspan="3"></td>
+					<td>{{n.firstName}}</td>
+					<td>{{n.lastName}}</td>
+					<td>{{n.birthday}}</td>
 				</tr>
 			</tbody>
 	</table>
