Fixed up under 12 function call.

--- a/client/app/view/view.html
+++ b/client/app/view/view.html
@@ -24,7 +24,7 @@
 					<td colspan="3"></td>
 					<td>{{n.firstName}} {{n.lastName}}</td>
 					<td>{{n.birthday | date:'dd/MM/yyyy'}}</td>
-					<td>{{isUnder12(n.birthday)}}</td>
+					<td>{{n.under12}}</td>
 				</tr>
 			</tbody>
 	</table>
