--- a/client/styles/variables.less
+++ b/client/styles/variables.less
@@ -1,1 +1,6 @@
-@bw-orange: #FF920C;
+@bw-orange: #f26d21;
+@black: #1a2127;
+@teal: #00a88c;
+@dark-teal: #008B74;
+@red: #c73500;
+@dark-red: #882400;
