Passcode page girls styles

--- a/client/styles/girls/coderdojo-signup.less
+++ b/client/styles/girls/coderdojo-signup.less
@@ -1,10 +1,10 @@
-
 @import "../variables";
 @import "../core";
 
 .main-img .fa.fa-female.large {
   font-size: 14em;
   color: @bw-orange;
+  float: left;
 }
 
 body, pre, pre code {
@@ -23,7 +23,6 @@ code, html, pre, pre code {
   background-color: @dark-teal;
 }
 
-
 .button.is-danger {
   background-color: @red;
 }
@@ -31,4 +30,17 @@ code, html, pre, pre code {
 .button.is-danger.is-active, .button.is-danger:focus, .button.is-danger:hover {
   background-color: @dark-red;
 }
+
+.container .passcode, .main-title {
+  text-align: center;
+}
+
+.title {
+  font-weight: bold;
+}
+
+.main-img .title {
+  margin-top: 50px;
+}
+
 
