--- a/client/styles/coderdojo-signup.less
+++ b/client/styles/coderdojo-signup.less
@@ -1,3 +1,3 @@
-@import "../../node_modules/font-awesome/less/font-awesome.less";
+//@import "../../node_modules/font-awesome/less/font-awesome.less";
 @import "variables.less";
 @import "core.less";
