--- a/client/styles/girls/coderdojo-signup.less
+++ b/client/styles/girls/coderdojo-signup.less
@@ -1,10 +1,6 @@
 @import "../variables";
 @import "../core";
 
-.main-img .fa.fa-female.large {
-  font-size: 14em;
-  color: @bw-orange;
-}
 
 body, pre, pre code {
   color: @black;
@@ -42,4 +38,6 @@ code, html, pre, pre code {
   margin-top: 50px;
 }
 
-
+.center-text {
+  text-align: center;
+}
