Photo consent edits and css colours

--- a/client/styles/core.less
+++ b/client/styles/core.less
@@ -15,3 +15,18 @@ html, head, body {
   margin-top: 50px;
 }
 
+p.photo {
+  padding: 8px 8px;
+  background-color: lavenderblush;
+  font-weight: bold;
+}
+
+label.photo {
+  margin-top: 0px;
+  font-weight: bold;
+}
+
+h1.close {
+  color: rebeccapurple;
+}
+
