--- a/client/styles/girls/coderdojo-signup.less
+++ b/client/styles/girls/coderdojo-signup.less
@@ -11,11 +11,11 @@ code, html, pre, pre code {
 }
 
 .button.is-primary {
-  background-color: @teal;
+  background-color: rebeccapurple;
 }
 
 .button.is-primary.is-active, .button.is-primary:focus, .button.is-primary:hover {
-  background-color: @dark-teal;
+  background-color: purple;
 }
 
 .button.is-danger {
